--- a/PHD_Syed_Shariff.ipynb
+++ b/PHD_Syed_Shariff.ipynb
@@ -5131,127 +5131,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Class imbalance as a problem suspected, hence going for smote**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 296,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# smote in pipeline\n",
-    "sm = SMOTE(sampling_strategy='minority', random_state=7)\n",
-    "smote_logreg = Pipeline(steps=[('preprocessor', preprocessor),('sampling',sm),\n",
-    "                      ('classifier', LogisticRegression(max_iter=10000, tol=0.1))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('preprocessor',\n",
-       "                 ColumnTransformer(n_jobs=None, remainder='drop',\n",
-       "                                   sparse_threshold=0.3,\n",
-       "                                   transformer_weights=None,\n",
-       "                                   transformers=[('num',\n",
-       "                                                  Pipeline(memory=None,\n",
-       "                                                           steps=[('scaler',\n",
-       "                                                                   MinMaxScaler(copy=True,\n",
-       "                                                                                feature_range=(0,\n",
-       "                                                                                               1)))],\n",
-       "                                                           verbose=False),\n",
-       "                                                  ['ADSL 1', 'ADSL 2',\n",
-       "                                                   'ADSL 2+', 'BPL', 'Cable',\n",
-       "                                                   'Fiber 1', 'Fiber 2',\n",
-       "                                                   'Fiber High Speed',\n",
-       "                                                   'Fiber Ultra',\n",
-       "                                                   'Fibe...\n",
-       "                ('sampling',\n",
-       "                 SMOTE(k_neighbors=5, n_jobs=None, random_state=7,\n",
-       "                       sampling_strategy='minority')),\n",
-       "                ('classifier',\n",
-       "                 LogisticRegression(C=1.0, class_weight=None, dual=False,\n",
-       "                                    fit_intercept=True, intercept_scaling=1,\n",
-       "                                    l1_ratio=None, max_iter=10000,\n",
-       "                                    multi_class='auto', n_jobs=None,\n",
-       "                                    penalty='l2', random_state=None,\n",
-       "                                    solver='lbfgs', tol=0.1, verbose=0,\n",
-       "                                    warm_start=False))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smote_logreg.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7641329663349566 0.6655376799322608\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(smote_logreg.score(X_train, y_train),smote_logreg.score(X_val,y_val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test_logistic_smote = smote_logreg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = pd.DataFrame({'id':test_df.id,'outage_duration':y_test_logistic_smote})\n",
-    "output.to_csv('logistic/output2.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Smote resulted in performance decrease, and the test result was 53%, hence smote was a bad idea. let's try PCA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**PCA**"
    ]
   },
@@ -5481,13 +5360,6 @@
     "output = pd.DataFrame({'id':test_df.id,'outage_duration':y_test_logistic_pca2})\n",
     "output.to_csv('logistic/output4.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5748,6 +5620,13 @@
     "y_test_logistic_vol = clf_logreg.predict(X_test_vol)\n",
     "output = pd.DataFrame({'id':test_df.id,'outage_duration':y_test_logistic_vol})\n",
     "output.to_csv('logistic/output5.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test resulted in 57% accuracy"
    ]
   },
   {
@@ -6130,169 +6009,6 @@
    "metadata": {},
    "source": [
     "Above output resulted in a 59% percent accuracy which is improvement"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Using bagging classifier over SVM to see if there is any improvement in performance**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 283,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import BaggingClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_pipe = Pipeline(steps=[('preprocessor', preprocessor),\n",
-    "                      ('classifier', SVC(kernel='poly',gamma=1))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_bagged = BaggingClassifier(svm_basic, n_estimators=80, random_state=314,n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 334,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = pd.DataFrame(preprocessor.fit_transform(X_train))\n",
-    "Xv =pd.DataFrame(preprocessor.transform(X_val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 341,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm=BaggingClassifier(SVC(kernel='poly',gamma=1), max_samples=0.4,max_features=0.5, n_estimators=80, n_jobs=-1,random_state=123,verbose=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 342,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   1 tasks      | elapsed:   51.4s\n",
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   51.8s remaining:   51.8s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   52.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   52.5s finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BaggingClassifier(base_estimator=SVC(C=1.0, break_ties=False, cache_size=200,\n",
-       "                                     class_weight=None, coef0=0.0,\n",
-       "                                     decision_function_shape='ovr', degree=3,\n",
-       "                                     gamma=1, kernel='poly', max_iter=-1,\n",
-       "                                     probability=False, random_state=None,\n",
-       "                                     shrinking=True, tol=0.001, verbose=False),\n",
-       "                  bootstrap=True, bootstrap_features=False, max_features=0.5,\n",
-       "                  max_samples=0.4, n_estimators=80, n_jobs=-1, oob_score=False,\n",
-       "                  random_state=123, verbose=10, warm_start=False)"
-      ]
-     },
-     "execution_count": 342,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "svm.fit(X,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 343,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   1 tasks      | elapsed:  1.8min\n",
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.8min remaining:  1.8min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min finished\n",
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   1 tasks      | elapsed:   26.7s\n",
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   26.9s remaining:   26.9s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7313148422612746 0.6900931414055885\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   29.3s remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   29.3s finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(svm.score(X,y_train),svm.score(Xv,y_val))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 344,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   1 tasks      | elapsed:   36.4s\n",
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   36.7s remaining:   36.7s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   38.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   38.8s finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "Xt = pd.DataFrame(preprocessor.transform(X_test))\n",
-    "y_test_svm_bag = svm.predict(Xt)\n",
-    "output = pd.DataFrame({'id':test_df.id,'outage_duration':y_test_svm_bag})\n",
-    "output.to_csv('svm/output2.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "50% on test"
    ]
   },
   {
@@ -7518,7 +7234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above model gave an accuracy of 65% on test, hence proceeding with the neural networks"
+    "The above model gave an accuracy of 65% on test, hence proceeding with the smote and then neural networks"
    ]
   },
   {
